Fixed bug where image and PDF previews were not showing in the MetadataView Also created a DownloadButtonView to handle all the downloading in the app, since there were bugs with downloading entities in the MetadataView as well.

--- a/metacatui/src/main/webapp/css/metacatui-common.css
+++ b/metacatui/src/main/webapp/css/metacatui-common.css
@@ -2040,7 +2040,7 @@ table.download-contents .name{
 }
 table.download-contents .btn-container,
 table.download-contents .btn-container .btn{
-	width: 115px;
+	width: 140px;
 } 
 .download-contents.service .btn-container .btn{
 	width: 135px;
